--- a/HTML Portfolio.html
+++ b/HTML Portfolio.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
+<!-- saved from url=(0102)file:///C:/Users/kim_l/OneDrive/Documents/Kim/Coding/Code%20School/HTMLPortfolioProject/src/index.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="normalize.css">
-  <link href="https://fonts.googleapis.com/css?family=Assistant|Playfair+Display" rel="stylesheet">
+  <link rel="stylesheet" href="./HTML Portfolio_files/main.css">
+  <link rel="stylesheet" href="./HTML Portfolio_files/normalize.css">
+  <link href="./HTML Portfolio_files/css" rel="stylesheet">
   <title>HTML Portfolio</title>
 </head>
 <body>
-	<div class=container>	
+	<div class="container">	
 		<header>
 			<h1>Kimberley Davies</h1>
 			<h2>Web Designer</h2>
 		</header>
 	</div>		
-		<div class=tagline>
+		<div class="tagline">
 			<h3>Here's What I Do</h3>
 			<p>I enjoy creating clean, fun and easy to use sites that are widely accessible.</p>
 		</div>
 	
-	<div class=skills>
+	<div class="skills">
 		<h3>Skills</h3>
 		<p>I enjoy writing front-end code with these technologies:</p>
 		<ul>
@@ -31,10 +31,11 @@
 			<li>PHP</li>
 		</ul>
 	</div> 
-	<div class=contact>
+	<div class="contact">
 		<h3>Contact Me</h3>
 		<p>Shoot me an email at <a>kimberleydavies30@hotmail.com</a></p>
 	</div>
 
-</body>
-</html>
+
+
+</body></html>
