--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 	<div class=container>	
-		<header>
+		<div class=header>
 			<h1>Kimberley Davies</h1>
 			<h2>Web Designer</h2>
-		</header>
+		</div>
 	</div>		
 		<div class=tagline>
 			<h3>Here's What I Do</h3>
@@ -33,7 +33,7 @@
 	</div> 
 	<div class=contact>
 		<h3>Contact Me</h3>
-		<p>Shoot me an email at <a>kimberleydavies30@hotmail.com</a></p>
+		<p>Shoot me an email at <a href=#>kimberleydavies30@hotmail.com</a></p>
 	</div>
 
 </body>
