--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 	</div> 
 	<div class=contact>
 		<h3>Contact Me</h3>
-		<p>Shoot me an email at <a href=#>kimberleydavies30@hotmail.com</a></p>
+		<p>Shoot me an email at <a href='#'>kimberleydavies30@hotmail.com</a></p>
 	</div>
 
 </body>
